--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="page">
     <header>
         <strong>Sua próxima viagem:</strong>
-        <h1>Conheça Busa</h1>
+        <h1>Conheça Busan</h1>
         <img src="Image_01.png" alt="vista panoramica da cidade de Busan">
         <p>Busan, a estrela em ascensão da Coreia do Sul, oferece de tudo, desde churrascarias de primeira linha até tradicionais barracas de comida de rua. Aqui, exploramos a segunda cidade da Coreia do Sul e descobrimos as suas ofertas culinárias.</p>   
     </header>
